--- a/album.html
+++ b/album.html
@@ -20,11 +20,11 @@
         <main class="album-view container narrow">
             <section class="clearfix">
                 <div class="column half">
-                    <img src="assets/images/album_covers/01.png" class="album-cover-art">
+                    <img src="assets/images/album_covers/01.png" class="album-cover-art" id="album-change" onclick="toSwitch()">
                 </div>
                 <div class="column half">
                     <h2 class="album-view-title">The Colors</h2>
-                    <h3 class="album-view-artist">Pablo Picasso</h3>
+                    <h3 class="album-view-artist" id="a-v-a">Pablo Picasso</h3>
                     <h5 class="album-view-release-info">1909 Spanish Records</h5>
                 </div>
             </section>
